proper semantic update
I have updated addinal content to the semantics

--- a/portofolio.html
+++ b/portofolio.html
@@ -165,7 +165,7 @@ body {font-family: "Lato", sans-serif}
     </div>
   </div>
 
- 
+ <!--additinal content-->
   
 
   <!-- The Contact Section -->
